--- a/NamhaeGuide_iOS/MapVC.xib
+++ b/NamhaeGuide_iOS/MapVC.xib
@@ -11,26 +11,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapVC" customModule="NamhaeGuide_iOS" customModuleProvider="target">
             <connections>
-                <outlet property="mapImg" destination="4mh-Ar-UM5" id="2J3-xc-tqd"/>
+                <outlet property="mapImg" destination="hlu-UN-LJg" id="i5E-eh-x84"/>
+                <outlet property="mapScroll" destination="C4y-ns-ClX" id="8kW-bS-xab"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="o4j-gW-wWY"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="MapVC" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="MapVC" translatesAutoresizingMaskIntoConstraints="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4mh-Ar-UM5">
-                    <rect key="frame" x="20" y="144" width="388" height="638"/>
-                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="관광지도" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBG-84-fQy">
+                    <rect key="frame" x="10" y="64" width="408" height="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C4y-ns-ClX">
+                    <rect key="frame" x="10" y="145" width="398" height="444"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hlu-UN-LJg">
+                            <rect key="frame" x="8" y="8" width="382" height="428"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="4mh-Ar-UM5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="I09-C6-vh6"/>
-                <constraint firstItem="4mh-Ar-UM5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="IYb-ma-JqL"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4mh-Ar-UM5" secondAttribute="trailing" constant="20" id="N3T-Bq-483"/>
-                <constraint firstItem="4mh-Ar-UM5" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="b5y-TK-eIe"/>
+                <constraint firstItem="nBG-84-fQy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="1B0-eB-AE5"/>
+                <constraint firstItem="nBG-84-fQy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="Kg1-aU-Efq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nBG-84-fQy" secondAttribute="trailing" constant="10" id="kQx-7U-c1g"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <point key="canvasLocation" x="138.78504672897196" y="138.66090712742982"/>
