--- a/NamhaeGuide_iOS/MapVC.xib
+++ b/NamhaeGuide_iOS/MapVC.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -11,41 +11,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapVC" customModule="NamhaeGuide_iOS" customModuleProvider="target">
             <connections>
-                <outlet property="mapImg" destination="hlu-UN-LJg" id="i5E-eh-x84"/>
-                <outlet property="mapScroll" destination="C4y-ns-ClX" id="8kW-bS-xab"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="o4j-gW-wWY"/>
+                <outlet property="mapImg" destination="KAs-ai-pyt" id="Otl-cJ-FUO"/>
+                <outlet property="mapScroll" destination="88C-xw-6Go" id="awZ-g2-08i"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="MapVC" translatesAutoresizingMaskIntoConstraints="NO" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="관광지도" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBG-84-fQy">
-                    <rect key="frame" x="10" y="64" width="408" height="29"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88C-xw-6Go">
+                    <rect key="frame" x="0.0" y="146" width="414" height="384"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KAs-ai-pyt">
+                            <rect key="frame" x="20" y="20" width="374" height="344"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <viewLayoutGuide key="contentLayoutGuide" id="zeX-hW-8gt"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="Cr0-ag-JVe"/>
+                </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="관광 지도" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9vC-He-OKI">
+                    <rect key="frame" x="163" y="76" width="88.5" height="29"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C4y-ns-ClX">
-                    <rect key="frame" x="10" y="145" width="398" height="444"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hlu-UN-LJg">
-                            <rect key="frame" x="8" y="8" width="382" height="428"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                    </subviews>
-                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <constraints>
-                <constraint firstItem="nBG-84-fQy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="1B0-eB-AE5"/>
-                <constraint firstItem="nBG-84-fQy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="Kg1-aU-Efq"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nBG-84-fQy" secondAttribute="trailing" constant="10" id="kQx-7U-c1g"/>
-            </constraints>
-            <nil key="simulatedTopBarMetrics"/>
-            <point key="canvasLocation" x="138.78504672897196" y="138.66090712742982"/>
+            <point key="canvasLocation" x="-304.34782608695656" y="-110.49107142857143"/>
         </view>
     </objects>
     <resources>
