--- a/NamhaeGuide_iOS/PublicOfficesVC.storyboard
+++ b/NamhaeGuide_iOS/PublicOfficesVC.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -12,17 +12,32 @@
         <!--Public OfficesVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="PublicOfficesVC" customModule="NamhaeGuide_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PublicOfficesVC" id="Y6W-OH-hqX" customClass="PublicOfficesVC" customModule="NamhaeGuide_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BQz-Pm-kY6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BQz-Pm-kY6" secondAttribute="trailing" id="7ey-e9-DSh"/>
+                            <constraint firstItem="BQz-Pm-kY6" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="glg-DV-awf"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="BQz-Pm-kY6" secondAttribute="bottom" id="how-w2-ceR"/>
+                            <constraint firstItem="BQz-Pm-kY6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="teu-VH-8sf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="BQz-Pm-kY6" id="uCy-Wc-Cj0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="90" y="124"/>
+            <point key="canvasLocation" x="90" y="97"/>
         </scene>
     </scenes>
     <resources>
