--- a/NamhaeGuide_iOS/PublicOfficesCell.xib
+++ b/NamhaeGuide_iOS/PublicOfficesCell.xib
@@ -10,38 +10,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="PublicOfficesCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="PublicOfficesCell" rowHeight="98" id="KGk-i7-Jjw" customClass="PublicOfficesCell" customModule="NamhaeGuide_iOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="PublicOfficesCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="PublicOfficesCell" rowHeight="100" id="KGk-i7-Jjw" customClass="PublicOfficesCell" customModule="NamhaeGuide_iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="500" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="500" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="남해읍행정복지센터" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECK-zD-j8G">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="남해읍행정복지센터" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECK-zD-j8G">
                         <rect key="frame" x="15" y="20" width="470" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="055-1111-2222" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pg-gq-L1n">
-                        <rect key="frame" x="15" y="65" width="470" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="055-1111-2222" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pg-gq-L1n">
+                        <rect key="frame" x="15" y="61" width="470" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="경상남도 남해군 남해읍" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ev-EI-FXo">
-                        <rect key="frame" x="15" y="109" width="470" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="경상남도 남해군 남해읍" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ev-EI-FXo">
+                        <rect key="frame" x="15" y="102" width="470" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="9ev-EI-FXo" firstAttribute="top" secondItem="4pg-gq-L1n" secondAttribute="bottom" constant="20" id="0e0-IY-Nq9"/>
                     <constraint firstItem="ECK-zD-j8G" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="43o-LB-9O9"/>
                     <constraint firstItem="ECK-zD-j8G" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="4FH-XP-BeT"/>
                     <constraint firstAttribute="trailing" secondItem="9ev-EI-FXo" secondAttribute="trailing" constant="15" id="9Ai-fS-0Zu"/>
+                    <constraint firstItem="4pg-gq-L1n" firstAttribute="top" secondItem="ECK-zD-j8G" secondAttribute="bottom" constant="20" id="PIq-NS-DZs"/>
                     <constraint firstItem="9ev-EI-FXo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Sir-na-oGE"/>
                     <constraint firstAttribute="trailing" secondItem="4pg-gq-L1n" secondAttribute="trailing" constant="15" id="ZL1-t9-ff5"/>
+                    <constraint firstItem="ECK-zD-j8G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="eeg-Xy-nDw"/>
                     <constraint firstItem="4pg-gq-L1n" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="klQ-Jv-9YL"/>
                     <constraint firstItem="4pg-gq-L1n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="pZC-j5-bcT"/>
                     <constraint firstItem="9ev-EI-FXo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="pyb-PU-OMo"/>
