--- a/NamhaeGuide_iOS/PublicOfficesVC.storyboard
+++ b/NamhaeGuide_iOS/PublicOfficesVC.storyboard
@@ -32,7 +32,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="BQz-Pm-kY6" id="uCy-Wc-Cj0"/>
+                        <outlet property="officetable" destination="BQz-Pm-kY6" id="Fps-A8-3J5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
