--- a/NamhaeGuide_iOS/PublicOffice/PublicOfficesVC.storyboard
+++ b/NamhaeGuide_iOS/PublicOffice/PublicOfficesVC.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Public OfficesVC-->
+        <!--행정복지센터-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="PublicOfficesVC" id="Y6W-OH-hqX" customClass="PublicOfficesVC" customModule="NamhaeGuide_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PublicOfficesVC" title="행정복지센터" id="Y6W-OH-hqX" customClass="PublicOfficesVC" customModule="NamhaeGuide_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,6 +31,7 @@
                             <constraint firstItem="BQz-Pm-kY6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="teu-VH-8sf"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="officetable" destination="BQz-Pm-kY6" id="Fps-A8-3J5"/>
                     </connections>
@@ -38,6 +39,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="90" y="97"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="UXb-Jn-alE">
+            <objects>
+                <viewController id="qvr-DQ-vPo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b5R-mo-Ld3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Xbv-Xu-3q9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="opA-NQ-vT1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1057" y="96"/>
         </scene>
     </scenes>
     <resources>
